--- a/src/app/Admin/Admin_Layouts/layouts.component.html
+++ b/src/app/Admin/Admin_Layouts/layouts.component.html
@@ -289,7 +289,7 @@
                             </div>
 
                             <h6>Cài Đặt Quản Trị Viên</h6>
-                            <div class="row">
+                            <div class="row" style="margin-bottom: 10px;">
                                 <div class="col-md-6">
                                     <label class="form-label">Màu nền
                                         Sidebar:</label>
@@ -333,7 +333,7 @@
                             </div>
                             <div class="modal-footer">
                                 <button type="submit"
-                                    class="btn btn-primary">Lưu lại</button>
+                                    class="btn btn-primary" style="margin-right: 100px;"><i class="bi bi-save2" style="padding: 0px 10px;"></i>Lưu lại</button>
                             </div>
                         </form>
                     </div>
